--- a/.rvmrc
+++ b/.rvmrc
@@ -1,6 +1,1 @@
-
-if [[ -d "$rvm_path/environments" && -s "$rvm_path/environments/ree-1.8.7-2010.02@ydd" ]] ; then
-  \. "$rvm_path/environments/ree-1.8.7-2010.02@ydd"
-else
-  rvm --create use  "ree-1.8.7-2010.02@ydd"
-fi
+rvm --create use "@ydd"
